GSoC notebookbar: icon size switching
+ added entry in the Options > View
+ changed sfxlo-SidebarToolBox to sfxlo-NotebookbarToolBox
  in the Notebookbar ui files

Change-Id: Id5719953be9830b650af96d54e63936c553cda74
Reviewed-on: https://gerrit.libreoffice.org/28169
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Samuel Mehrbrodt <s.mehrbrodt@gmail.com>

--- a/sc/uiconfig/scalc/ui/notebookbar.ui
+++ b/sc/uiconfig/scalc/ui/notebookbar.ui
@@ -507,7 +507,7 @@
                         <property name="can_focus">False</property>
                         <property name="spacing">6</property>
                         <child>
-                          <object class="sfxlo-SidebarToolBox" id="font">
+                          <object class="sfxlo-NotebookbarToolBox" id="font">
                             <property name="visible">True</property>
                             <property name="can_focus">False</property>
                             <child>
@@ -530,7 +530,7 @@
                           </packing>
                         </child>
                         <child>
-                          <object class="sfxlo-SidebarToolBox" id="fontheight">
+                          <object class="sfxlo-NotebookbarToolBox" id="fontheight">
                             <property name="visible">True</property>
                             <property name="can_focus">False</property>
                             <child>
@@ -565,7 +565,7 @@
                         <property name="can_focus">False</property>
                         <property name="spacing">12</property>
                         <child>
-                          <object class="sfxlo-SidebarToolBox" id="fonteffects">
+                          <object class="sfxlo-NotebookbarToolBox" id="fonteffects">
                             <property name="visible">True</property>
                             <property name="can_focus">False</property>
                             <property name="show_arrow">False</property>
@@ -647,7 +647,7 @@
                           </packing>
                         </child>
                         <child>
-                          <object class="sfxlo-SidebarToolBox" id="cellbordertype">
+                          <object class="sfxlo-NotebookbarToolBox" id="cellbordertype">
                             <property name="visible">True</property>
                             <property name="can_focus">False</property>
                             <property name="valign">center</property>
@@ -677,7 +677,7 @@
                           </packing>
                         </child>
                         <child>
-                          <object class="sfxlo-SidebarToolBox" id="spacingbar">
+                          <object class="sfxlo-NotebookbarToolBox" id="spacingbar">
                             <property name="visible">True</property>
                             <property name="can_focus">False</property>
                             <child>
@@ -703,7 +703,7 @@
                           </packing>
                         </child>
                         <child>
-                          <object class="sfxlo-SidebarToolBox" id="colorbar">
+                          <object class="sfxlo-NotebookbarToolBox" id="colorbar">
                             <property name="visible">True</property>
                             <property name="can_focus">False</property>
                             <property name="show_arrow">False</property>
@@ -765,7 +765,7 @@
                         <property name="can_focus">False</property>
                         <property name="orientation">vertical</property>
                         <child>
-                          <object class="sfxlo-SidebarToolBox" id="fontadjust">
+                          <object class="sfxlo-NotebookbarToolBox" id="fontadjust">
                             <property name="visible">True</property>
                             <property name="can_focus">False</property>
                             <property name="show_arrow">False</property>
@@ -805,7 +805,7 @@
                           </packing>
                         </child>
                         <child>
-                          <object class="sfxlo-SidebarToolBox" id="position">
+                          <object class="sfxlo-NotebookbarToolBox" id="position">
                             <property name="visible">True</property>
                             <property name="can_focus">False</property>
                             <property name="show_arrow">False</property>
@@ -892,7 +892,7 @@
                                 <property name="can_focus">False</property>
                                 <property name="spacing">12</property>
                                 <child>
-                                  <object class="sfxlo-SidebarToolBox" id="verticalalignment">
+                                  <object class="sfxlo-NotebookbarToolBox" id="verticalalignment">
                                     <property name="visible">True</property>
                                     <property name="can_focus">False</property>
                                     <property name="has_tooltip">True</property>
@@ -944,7 +944,7 @@
                                   </packing>
                                 </child>
                                 <child>
-                                  <object class="sfxlo-SidebarToolBox" id="writedirection">
+                                  <object class="sfxlo-NotebookbarToolBox" id="writedirection">
                                     <property name="visible">True</property>
                                     <property name="can_focus">False</property>
                                     <property name="show_arrow">False</property>
@@ -983,7 +983,7 @@
                                   </packing>
                                 </child>
                                 <child>
-                                  <object class="sfxlo-SidebarToolBox" id="textdir">
+                                  <object class="sfxlo-NotebookbarToolBox" id="textdir">
                                     <property name="visible">True</property>
                                     <property name="can_focus">False</property>
                                     <property name="has_tooltip">True</property>
@@ -1038,7 +1038,7 @@
                                 <property name="can_focus">False</property>
                                 <property name="spacing">6</property>
                                 <child>
-                                  <object class="sfxlo-SidebarToolBox" id="horizontalalignment">
+                                  <object class="sfxlo-NotebookbarToolBox" id="horizontalalignment">
                                     <property name="visible">True</property>
                                     <property name="can_focus">False</property>
                                     <property name="has_tooltip">True</property>
@@ -1101,7 +1101,7 @@
                                   </packing>
                                 </child>
                                 <child>
-                                  <object class="sfxlo-SidebarToolBox" id="indent">
+                                  <object class="sfxlo-NotebookbarToolBox" id="indent">
                                     <property name="visible">True</property>
                                     <property name="can_focus">False</property>
                                     <property name="has_tooltip">True</property>
@@ -1147,7 +1147,7 @@
                                   </packing>
                                 </child>
                                 <child>
-                                  <object class="sfxlo-SidebarToolBox" id="wrap">
+                                  <object class="sfxlo-NotebookbarToolBox" id="wrap">
                                     <property name="visible">True</property>
                                     <property name="can_focus">False</property>
                                     <property name="has_tooltip">True</property>
@@ -1231,7 +1231,7 @@
                             <property name="can_focus">False</property>
                             <property name="orientation">vertical</property>
                             <child>
-                              <object class="sfxlo-SidebarToolBox" id="numberformat">
+                              <object class="sfxlo-NotebookbarToolBox" id="numberformat">
                                 <property name="visible">True</property>
                                 <property name="can_focus">False</property>
                                 <property name="show_arrow">False</property>
@@ -1256,7 +1256,7 @@
                               </packing>
                             </child>
                             <child>
-                              <object class="sfxlo-SidebarToolBox" id="numberformat1">
+                              <object class="sfxlo-NotebookbarToolBox" id="numberformat1">
                                 <property name="visible">True</property>
                                 <property name="can_focus">False</property>
                                 <property name="show_arrow">False</property>
@@ -1461,7 +1461,7 @@
                             <property name="can_focus">False</property>
                             <property name="orientation">vertical</property>
                             <child>
-                              <object class="sfxlo-SidebarToolBox" id="rows">
+                              <object class="sfxlo-NotebookbarToolBox" id="rows">
                                 <property name="visible">True</property>
                                 <property name="can_focus">False</property>
                                 <property name="has_tooltip">True</property>
@@ -1504,7 +1504,7 @@
                               </packing>
                             </child>
                             <child>
-                              <object class="sfxlo-SidebarToolBox" id="cols">
+                              <object class="sfxlo-NotebookbarToolBox" id="cols">
                                 <property name="visible">True</property>
                                 <property name="can_focus">False</property>
                                 <property name="has_tooltip">True</property>
@@ -3331,7 +3331,7 @@
                         <property name="can_focus">False</property>
                         <property name="orientation">vertical</property>
                         <child>
-                          <object class="sfxlo-SidebarToolBox" id="brightnes">
+                          <object class="sfxlo-NotebookbarToolBox" id="brightnes">
                             <property name="visible">True</property>
                             <property name="can_focus">False</property>
                             <property name="show_arrow">False</property>
@@ -3358,7 +3358,7 @@
                           </packing>
                         </child>
                         <child>
-                          <object class="sfxlo-SidebarToolBox" id="contrast">
+                          <object class="sfxlo-NotebookbarToolBox" id="contrast">
                             <property name="visible">True</property>
                             <property name="can_focus">False</property>
                             <property name="show_arrow">False</property>
@@ -3409,7 +3409,7 @@
                         <property name="can_focus">False</property>
                         <property name="orientation">vertical</property>
                         <child>
-                          <object class="sfxlo-SidebarToolBox" id="gamma">
+                          <object class="sfxlo-NotebookbarToolBox" id="gamma">
                             <property name="visible">True</property>
                             <property name="can_focus">False</property>
                             <property name="show_arrow">False</property>
@@ -3436,7 +3436,7 @@
                           </packing>
                         </child>
                         <child>
-                          <object class="sfxlo-SidebarToolBox" id="transparence">
+                          <object class="sfxlo-NotebookbarToolBox" id="transparence">
                             <property name="visible">True</property>
                             <property name="can_focus">False</property>
                             <property name="show_arrow">False</property>
@@ -3502,7 +3502,7 @@
                         <property name="can_focus">False</property>
                         <property name="orientation">vertical</property>
                         <child>
-                          <object class="sfxlo-SidebarToolBox" id="mode">
+                          <object class="sfxlo-NotebookbarToolBox" id="mode">
                             <property name="visible">True</property>
                             <property name="can_focus">False</property>
                             <property name="show_arrow">False</property>
@@ -3529,7 +3529,7 @@
                           </packing>
                         </child>
                         <child>
-                          <object class="sfxlo-SidebarToolBox" id="red">
+                          <object class="sfxlo-NotebookbarToolBox" id="red">
                             <property name="visible">True</property>
                             <property name="can_focus">False</property>
                             <property name="show_arrow">False</property>
@@ -3580,7 +3580,7 @@
                         <property name="can_focus">False</property>
                         <property name="orientation">vertical</property>
                         <child>
-                          <object class="sfxlo-SidebarToolBox" id="green">
+                          <object class="sfxlo-NotebookbarToolBox" id="green">
                             <property name="visible">True</property>
                             <property name="can_focus">False</property>
                             <property name="show_arrow">False</property>
@@ -3607,7 +3607,7 @@
                           </packing>
                         </child>
                         <child>
-                          <object class="sfxlo-SidebarToolBox" id="blue">
+                          <object class="sfxlo-NotebookbarToolBox" id="blue">
                             <property name="visible">True</property>
                             <property name="can_focus">False</property>
                             <property name="show_arrow">False</property>
@@ -3670,7 +3670,7 @@
                         <property name="can_focus">False</property>
                         <property name="orientation">vertical</property>
                         <child>
-                          <object class="sfxlo-SidebarToolBox" id="flip">
+                          <object class="sfxlo-NotebookbarToolBox" id="flip">
                             <property name="visible">True</property>
                             <property name="can_focus">False</property>
                             <property name="show_arrow">False</property>
@@ -3696,7 +3696,7 @@
                           </packing>
                         </child>
                         <child>
-                          <object class="sfxlo-SidebarToolBox" id="flip1">
+                          <object class="sfxlo-NotebookbarToolBox" id="flip1">
                             <property name="visible">True</property>
                             <property name="can_focus">False</property>
                             <property name="show_arrow">False</property>
@@ -3746,7 +3746,7 @@
                         <property name="can_focus">False</property>
                         <property name="orientation">vertical</property>
                         <child>
-                          <object class="sfxlo-SidebarToolBox" id="crop">
+                          <object class="sfxlo-NotebookbarToolBox" id="crop">
                             <property name="visible">True</property>
                             <property name="can_focus">False</property>
                             <property name="show_arrow">False</property>
@@ -3772,7 +3772,7 @@
                           </packing>
                         </child>
                         <child>
-                          <object class="sfxlo-SidebarToolBox" id="filter">
+                          <object class="sfxlo-NotebookbarToolBox" id="filter">
                             <property name="visible">True</property>
                             <property name="can_focus">False</property>
                             <property name="show_arrow">False</property>
