--- a/sd/uiconfig/simpress/ui/notebookbar.ui
+++ b/sd/uiconfig/simpress/ui/notebookbar.ui
@@ -471,7 +471,7 @@
                             <property name="can_focus">False</property>
                             <property name="orientation">vertical</property>
                             <child>
-                              <object class="sfxlo-SidebarToolBox" id="layoutbox">
+                              <object class="sfxlo-NotebookbarToolBox" id="layoutbox">
                                 <property name="visible">True</property>
                                 <property name="can_focus">False</property>
                                 <child>
@@ -494,7 +494,7 @@
                               </packing>
                             </child>
                             <child>
-                              <object class="sfxlo-SidebarToolBox" id="layoutbox2">
+                              <object class="sfxlo-NotebookbarToolBox" id="layoutbox2">
                                 <property name="visible">True</property>
                                 <property name="can_focus">False</property>
                                 <child>
@@ -553,7 +553,7 @@
                             <property name="can_focus">False</property>
                             <property name="spacing">6</property>
                             <child>
-                              <object class="sfxlo-SidebarToolBox" id="font">
+                              <object class="sfxlo-NotebookbarToolBox" id="font">
                                 <property name="visible">True</property>
                                 <property name="can_focus">False</property>
                                 <child>
@@ -576,7 +576,7 @@
                               </packing>
                             </child>
                             <child>
-                              <object class="sfxlo-SidebarToolBox" id="fontheight">
+                              <object class="sfxlo-NotebookbarToolBox" id="fontheight">
                                 <property name="visible">True</property>
                                 <property name="can_focus">False</property>
                                 <child>
@@ -599,7 +599,7 @@
                               </packing>
                             </child>
                             <child>
-                              <object class="sfxlo-SidebarToolBox" id="fontadjust">
+                              <object class="sfxlo-NotebookbarToolBox" id="fontadjust">
                                 <property name="visible">True</property>
                                 <property name="can_focus">False</property>
                                 <property name="show_arrow">False</property>
@@ -651,7 +651,7 @@
                             <property name="can_focus">False</property>
                             <property name="spacing">12</property>
                             <child>
-                              <object class="sfxlo-SidebarToolBox" id="fonteffects">
+                              <object class="sfxlo-NotebookbarToolBox" id="fonteffects">
                                 <property name="visible">True</property>
                                 <property name="can_focus">False</property>
                                 <property name="show_arrow">False</property>
@@ -733,7 +733,7 @@
                               </packing>
                             </child>
                             <child>
-                              <object class="sfxlo-SidebarToolBox" id="position">
+                              <object class="sfxlo-NotebookbarToolBox" id="position">
                                 <property name="visible">True</property>
                                 <property name="can_focus">False</property>
                                 <property name="show_arrow">False</property>
@@ -774,7 +774,7 @@
                               </packing>
                             </child>
                             <child>
-                              <object class="sfxlo-SidebarToolBox" id="spacingbar">
+                              <object class="sfxlo-NotebookbarToolBox" id="spacingbar">
                                 <property name="visible">True</property>
                                 <property name="can_focus">False</property>
                                 <child>
@@ -800,7 +800,7 @@
                               </packing>
                             </child>
                             <child>
-                              <object class="sfxlo-SidebarToolBox" id="colorbar">
+                              <object class="sfxlo-NotebookbarToolBox" id="colorbar">
                                 <property name="visible">True</property>
                                 <property name="can_focus">False</property>
                                 <property name="show_arrow">False</property>
@@ -862,7 +862,7 @@
                             <property name="can_focus">False</property>
                             <property name="spacing">12</property>
                             <child>
-                              <object class="sfxlo-SidebarToolBox" id="textdir">
+                              <object class="sfxlo-NotebookbarToolBox" id="textdir">
                                 <property name="visible">True</property>
                                 <property name="can_focus">False</property>
                                 <property name="has_tooltip">True</property>
@@ -905,7 +905,7 @@
                               </packing>
                             </child>
                             <child>
-                              <object class="sfxlo-SidebarToolBox" id="numberbullet">
+                              <object class="sfxlo-NotebookbarToolBox" id="numberbullet">
                                 <property name="visible">True</property>
                                 <property name="can_focus">False</property>
                                 <property name="has_tooltip">True</property>
@@ -945,7 +945,7 @@
                               </packing>
                             </child>
                             <child>
-                              <object class="sfxlo-SidebarToolBox" id="indent">
+                              <object class="sfxlo-NotebookbarToolBox" id="indent">
                                 <property name="visible">True</property>
                                 <property name="can_focus">False</property>
                                 <property name="has_tooltip">True</property>
@@ -1002,7 +1002,7 @@
                             <property name="can_focus">False</property>
                             <property name="spacing">6</property>
                             <child>
-                              <object class="sfxlo-SidebarToolBox" id="horizontalalignment">
+                              <object class="sfxlo-NotebookbarToolBox" id="horizontalalignment">
                                 <property name="visible">True</property>
                                 <property name="can_focus">False</property>
                                 <property name="has_tooltip">True</property>
@@ -1065,7 +1065,7 @@
                               </packing>
                             </child>
                             <child>
-                              <object class="sfxlo-SidebarToolBox" id="writedirection">
+                              <object class="sfxlo-NotebookbarToolBox" id="writedirection">
                                 <property name="visible">True</property>
                                 <property name="can_focus">False</property>
                                 <property name="show_arrow">False</property>
@@ -1104,7 +1104,7 @@
                               </packing>
                             </child>
                             <child>
-                              <object class="sfxlo-SidebarToolBox" id="line">
+                              <object class="sfxlo-NotebookbarToolBox" id="line">
                                 <property name="visible">True</property>
                                 <property name="can_focus">False</property>
                                 <property name="halign">end</property>
@@ -1160,7 +1160,7 @@
                         <property name="can_focus">False</property>
                         <property name="orientation">vertical</property>
                         <child>
-                          <object class="sfxlo-SidebarToolBox" id="shapes1">
+                          <object class="sfxlo-NotebookbarToolBox" id="shapes1">
                             <property name="visible">True</property>
                             <property name="can_focus">False</property>
                             <property name="show_arrow">False</property>
@@ -1224,7 +1224,7 @@
                           </packing>
                         </child>
                         <child>
-                          <object class="sfxlo-SidebarToolBox" id="shapes2">
+                          <object class="sfxlo-NotebookbarToolBox" id="shapes2">
                             <property name="visible">True</property>
                             <property name="can_focus">False</property>
                             <property name="show_arrow">False</property>
@@ -1312,7 +1312,7 @@
                         <property name="can_focus">False</property>
                         <property name="orientation">vertical</property>
                         <child>
-                          <object class="sfxlo-SidebarToolBox" id="fillcolor">
+                          <object class="sfxlo-NotebookbarToolBox" id="fillcolor">
                             <property name="visible">True</property>
                             <property name="can_focus">False</property>
                             <property name="show_arrow">False</property>
@@ -1337,7 +1337,7 @@
                           </packing>
                         </child>
                         <child>
-                          <object class="sfxlo-SidebarToolBox" id="bordercolor">
+                          <object class="sfxlo-NotebookbarToolBox" id="bordercolor">
                             <property name="visible">True</property>
                             <property name="can_focus">False</property>
                             <property name="show_arrow">False</property>
@@ -1658,7 +1658,7 @@
                     <property name="can_focus">False</property>
                     <property name="orientation">vertical</property>
                     <child>
-                      <object class="sfxlo-SidebarToolBox" id="shapes3">
+                      <object class="sfxlo-NotebookbarToolBox" id="shapes3">
                         <property name="visible">True</property>
                         <property name="can_focus">False</property>
                         <property name="show_arrow">False</property>
@@ -1722,7 +1722,7 @@
                       </packing>
                     </child>
                     <child>
-                      <object class="sfxlo-SidebarToolBox" id="shapes4">
+                      <object class="sfxlo-NotebookbarToolBox" id="shapes4">
                         <property name="visible">True</property>
                         <property name="can_focus">False</property>
                         <property name="show_arrow">False</property>
@@ -2751,7 +2751,7 @@
                         <property name="can_focus">False</property>
                         <property name="orientation">vertical</property>
                         <child>
-                          <object class="sfxlo-SidebarToolBox" id="brightnes">
+                          <object class="sfxlo-NotebookbarToolBox" id="brightnes">
                             <property name="visible">True</property>
                             <property name="can_focus">False</property>
                             <property name="show_arrow">False</property>
@@ -2778,7 +2778,7 @@
                           </packing>
                         </child>
                         <child>
-                          <object class="sfxlo-SidebarToolBox" id="contrast">
+                          <object class="sfxlo-NotebookbarToolBox" id="contrast">
                             <property name="visible">True</property>
                             <property name="can_focus">False</property>
                             <property name="show_arrow">False</property>
@@ -2829,7 +2829,7 @@
                         <property name="can_focus">False</property>
                         <property name="orientation">vertical</property>
                         <child>
-                          <object class="sfxlo-SidebarToolBox" id="gamma">
+                          <object class="sfxlo-NotebookbarToolBox" id="gamma">
                             <property name="visible">True</property>
                             <property name="can_focus">False</property>
                             <property name="show_arrow">False</property>
@@ -2856,7 +2856,7 @@
                           </packing>
                         </child>
                         <child>
-                          <object class="sfxlo-SidebarToolBox" id="transparence">
+                          <object class="sfxlo-NotebookbarToolBox" id="transparence">
                             <property name="visible">True</property>
                             <property name="can_focus">False</property>
                             <property name="show_arrow">False</property>
@@ -2922,7 +2922,7 @@
                         <property name="can_focus">False</property>
                         <property name="orientation">vertical</property>
                         <child>
-                          <object class="sfxlo-SidebarToolBox" id="mode">
+                          <object class="sfxlo-NotebookbarToolBox" id="mode">
                             <property name="visible">True</property>
                             <property name="can_focus">False</property>
                             <property name="show_arrow">False</property>
@@ -2949,7 +2949,7 @@
                           </packing>
                         </child>
                         <child>
-                          <object class="sfxlo-SidebarToolBox" id="red">
+                          <object class="sfxlo-NotebookbarToolBox" id="red">
                             <property name="visible">True</property>
                             <property name="can_focus">False</property>
                             <property name="show_arrow">False</property>
@@ -3000,7 +3000,7 @@
                         <property name="can_focus">False</property>
                         <property name="orientation">vertical</property>
                         <child>
-                          <object class="sfxlo-SidebarToolBox" id="green">
+                          <object class="sfxlo-NotebookbarToolBox" id="green">
                             <property name="visible">True</property>
                             <property name="can_focus">False</property>
                             <property name="show_arrow">False</property>
@@ -3027,7 +3027,7 @@
                           </packing>
                         </child>
                         <child>
-                          <object class="sfxlo-SidebarToolBox" id="blue">
+                          <object class="sfxlo-NotebookbarToolBox" id="blue">
                             <property name="visible">True</property>
                             <property name="can_focus">False</property>
                             <property name="show_arrow">False</property>
@@ -3090,7 +3090,7 @@
                         <property name="can_focus">False</property>
                         <property name="orientation">vertical</property>
                         <child>
-                          <object class="sfxlo-SidebarToolBox" id="flip">
+                          <object class="sfxlo-NotebookbarToolBox" id="flip">
                             <property name="visible">True</property>
                             <property name="can_focus">False</property>
                             <property name="show_arrow">False</property>
@@ -3116,7 +3116,7 @@
                           </packing>
                         </child>
                         <child>
-                          <object class="sfxlo-SidebarToolBox" id="flip1">
+                          <object class="sfxlo-NotebookbarToolBox" id="flip1">
                             <property name="visible">True</property>
                             <property name="can_focus">False</property>
                             <property name="show_arrow">False</property>
@@ -3166,7 +3166,7 @@
                         <property name="can_focus">False</property>
                         <property name="orientation">vertical</property>
                         <child>
-                          <object class="sfxlo-SidebarToolBox" id="crop">
+                          <object class="sfxlo-NotebookbarToolBox" id="crop">
                             <property name="visible">True</property>
                             <property name="can_focus">False</property>
                             <property name="show_arrow">False</property>
@@ -3192,7 +3192,7 @@
                           </packing>
                         </child>
                         <child>
-                          <object class="sfxlo-SidebarToolBox" id="filter">
+                          <object class="sfxlo-NotebookbarToolBox" id="filter">
                             <property name="visible">True</property>
                             <property name="can_focus">False</property>
                             <property name="show_arrow">False</property>
