--- a/sw/uiconfig/swriter/ui/pagestylespanel.ui
+++ b/sw/uiconfig/swriter/ui/pagestylespanel.ui
@@ -116,7 +116,7 @@
             <property name="visible">True</property>
             <property name="can_focus">False</property>
             <property name="xalign">1</property>
-            <property name="label" translatable="yes">Column:</property>
+            <property name="label" translatable="yes">Columns:</property>
           </object>
           <packing>
             <property name="left_attach">0</property>
@@ -131,8 +131,8 @@
             <property name="can_focus">False</property>
             <items>
               <item translatable="yes">1 Column</item>
-              <item translatable="yes">2 Column</item>
-              <item translatable="yes">3 Column</item>
+              <item translatable="yes">2 Columns</item>
+              <item translatable="yes">3 Columns</item>
               <item translatable="yes">Left</item>
               <item translatable="yes">Right</item>
             </items>
