--- a/chart2/uiconfig/ui/tp_Trendline.ui
+++ b/chart2/uiconfig/ui/tp_Trendline.ui
@@ -87,7 +87,7 @@
                 </child>
                 <child>
                   <object class="GtkRadioButton" id="exponential">
-                    <property name="label" translatable="yes">E_xponential</property>
+                    <property name="label" translatable="yes">_Exponential</property>
                     <property name="visible">True</property>
                     <property name="can_focus">True</property>
                     <property name="receives_default">False</property>
@@ -444,7 +444,7 @@
                 </child>
                 <child>
                   <object class="GtkCheckButton" id="showEquation">
-                    <property name="label" translatable="yes">Show _Equation</property>
+                    <property name="label" translatable="yes">Show E_quation</property>
                     <property name="visible">True</property>
                     <property name="can_focus">True</property>
                     <property name="receives_default">False</property>
@@ -481,7 +481,7 @@
                     <property name="visible">True</property>
                     <property name="can_focus">False</property>
                     <property name="xalign">0</property>
-                    <property name="label" translatable="yes">Trendline Name</property>
+                    <property name="label" translatable="yes">Trendline _Name</property>
                     <property name="use_underline">True</property>
                     <property name="mnemonic_widget">entry_name</property>
                   </object>
@@ -526,13 +526,13 @@
                     <property name="visible">True</property>
                     <property name="can_focus">False</property>
                     <property name="xalign">0</property>
-                    <property name="label" translatable="yes">X Variable Name</property>
+                    <property name="label" translatable="yes">_X Variable Name</property>
                     <property name="use_underline">True</property>
                     <property name="mnemonic_widget">entry_Xname</property>
                   </object>
                   <packing>
                     <property name="left_attach">0</property>
-                    <property name="top_attach">5</property>
+                    <property name="top_attach">6</property>
                     <property name="width">1</property>
                     <property name="height">1</property>
                   </packing>
@@ -545,7 +545,7 @@
                 </object>
                   <packing>
                     <property name="left_attach">1</property>
-                    <property name="top_attach">5</property>
+                    <property name="top_attach">6</property>
                     <property name="width">1</property>
                     <property name="height">1</property>
                   </packing>
@@ -555,13 +555,13 @@
                     <property name="visible">True</property>
                     <property name="can_focus">False</property>
                     <property name="xalign">0</property>
-                    <property name="label" translatable="yes">Y Variable Name</property>
+                    <property name="label" translatable="yes">_Y Variable Name</property>
                     <property name="use_underline">True</property>
                     <property name="mnemonic_widget">entry_Yname</property>
                   </object>
                   <packing>
                     <property name="left_attach">0</property>
-                    <property name="top_attach">6</property>
+                    <property name="top_attach">7</property>
                     <property name="width">1</property>
                     <property name="height">1</property>
                   </packing>
@@ -574,7 +574,7 @@
                 </object>
                   <packing>
                     <property name="left_attach">1</property>
-                    <property name="top_attach">6</property>
+                    <property name="top_attach">7</property>
                     <property name="width">1</property>
                     <property name="height">1</property>
                   </packing>
