--- a/sw/uiconfig/swriter/ui/pageheaderpanel.ui
+++ b/sw/uiconfig/swriter/ui/pageheaderpanel.ui
@@ -93,7 +93,6 @@
             <property name="visible">True</property>
             <property name="can_focus">False</property>
             <property name="halign">end</property>
-            <property name="model">spacinglist</property>
           </object>
           <packing>
             <property name="left_attach">1</property>
@@ -105,7 +104,6 @@
             <property name="visible">True</property>
             <property name="can_focus">False</property>
             <property name="halign">end</property>
-            <property name="model">spacinglist</property>
           </object>
           <packing>
             <property name="left_attach">1</property>
@@ -113,17 +111,10 @@
           </packing>
         </child>
         <child>
-          <object class="GtkComboBoxText" id="samecontentLB">
-            <property name="width_request">150</property>
+          <object class="svxcorelo-SameContentListBox" id="samecontentLB">
             <property name="visible">True</property>
             <property name="can_focus">False</property>
             <property name="halign">end</property>
-            <items>
-              <item translatable="yes">All Pages</item>
-              <item translatable="yes">First Page</item>
-              <item translatable="yes">Left and Right Pages</item>
-              <item translatable="yes">First, Left and Right Pages</item>
-            </items>
           </object>
           <packing>
             <property name="left_attach">1</property>
