--- a/filter/uiconfig/ui/pdfgeneralpage.ui
+++ b/filter/uiconfig/ui/pdfgeneralpage.ui
@@ -77,7 +77,7 @@
                     </child>
                     <child>
                       <object class="GtkRadioButton" id="selection">
-                        <property name="label" translatable="yes">_Selection</property>
+                        <property name="label" translatable="yes">_Selection/Selected sheet(s)</property>
                         <property name="visible">True</property>
                         <property name="can_focus">True</property>
                         <property name="receives_default">False</property>
