tdf#89466: Resize color and gradient controls to 150px
Change-Id: I7a622bc47d3a070f6ad441a1fe3baac615b25058
Reviewed-on: https://gerrit.libreoffice.org/28258
Reviewed-by: Yousuf Philips <philipz85@hotmail.com>
Tested-by: Yousuf Philips <philipz85@hotmail.com>

--- a/sd/uiconfig/simpress/ui/sidebarslidebackground.ui
+++ b/sd/uiconfig/simpress/ui/sidebarslidebackground.ui
@@ -68,6 +68,7 @@
         </child>
         <child>
           <object class="svxlo-ColorLB" id="fillattr">
+            <property name="width_request">150</property>
             <property name="can_focus">False</property>
             <property name="has_tooltip">True</property>
           </object>
@@ -129,6 +130,7 @@
         </child>
         <child>
           <object class="svxlo-SvxFillAttrBox" id="fillattr1">
+            <property name="width_request">150</property>
             <property name="visible">True</property>
             <property name="can_focus">False</property>
           </object>
@@ -139,6 +141,7 @@
         </child>
         <child>
           <object class="svxlo-ColorLB" id="fillattr2">
+            <property name="width_request">150</property>
             <property name="visible">True</property>
             <property name="can_focus">False</property>
           </object>
