tdf#89466: Adjust alignment and add left and right margins
Change-Id: Ifcdd7586523d0cf839c9d896ce0d38570f822175
Reviewed-on: https://gerrit.libreoffice.org/28268
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Yousuf Philips <philipz85@hotmail.com>

--- a/sd/uiconfig/simpress/ui/sidebarslidebackground.ui
+++ b/sd/uiconfig/simpress/ui/sidebarslidebackground.ui
@@ -11,9 +11,9 @@
         <property name="visible">True</property>
         <property name="can_focus">False</property>
         <property name="halign">center</property>
-        <property name="valign">center</property>
-        <property name="hexpand">True</property>
-        <property name="vexpand">True</property>
+        <property name="valign">start</property>
+        <property name="margin_left">9</property>
+        <property name="margin_right">15</property>
         <property name="border_width">6</property>
         <property name="row_spacing">6</property>
         <property name="column_spacing">6</property>
