[GSoC] Keep the column width constant in fill style tabs
Change-Id: I55c182a31aa862a4683304f2e4ffff5d0cacf603
Reviewed-on: https://gerrit.libreoffice.org/28332
Tested-by: Jenkins <ci@libreoffice.org>
Tested-by: Yousuf Philips <philipz85@hotmail.com>
Reviewed-by: Katarina Behrens <Katarina.Behrens@cib.de>

--- a/cui/uiconfig/ui/hatchpage.ui
+++ b/cui/uiconfig/ui/hatchpage.ui
@@ -23,7 +23,7 @@
     <property name="hexpand">True</property>
     <property name="vexpand">True</property>
     <property name="border_width">6</property>
-    <property name="spacing">12</property>
+    <property name="spacing">6</property>
     <child>
       <object class="GtkFrame" id="frame3">
         <property name="visible">True</property>
@@ -50,7 +50,7 @@
                         <property name="vexpand">True</property>
                       </object>
                   <packing>
-                    <property name="expand">False</property>
+                    <property name="expand">True</property>
                     <property name="fill">True</property>
                     <property name="position">0</property>
                   </packing>
