--- a/cui/uiconfig/ui/bitmaptabpage.ui
+++ b/cui/uiconfig/ui/bitmaptabpage.ui
@@ -63,7 +63,7 @@
             <property name="visible">True</property>
             <property name="can_focus">False</property>
             <property name="xalign">0</property>
-            <property name="label" translatable="yes">Fill</property>
+            <property name="label" translatable="yes">Bitmap</property>
             <attributes>
               <attribute name="weight" value="bold"/>
             </attributes>
