--- a/cui/uiconfig/ui/optctlpage.ui
+++ b/cui/uiconfig/ui/optctlpage.ui
@@ -232,8 +232,8 @@
                     <property name="visible">True</property>
                     <property name="can_focus">False</property>
                     <items>
-                      <item translatable="yes">Arabic</item>
-                      <item translatable="yes">Hindi</item>
+                      <item translatable="yes">Arabic (1, 2, 3...)</item>
+                      <item translatable="yes">Indic (٣ ,٢ ,١...)</item>
                       <item translatable="yes">System</item>
                       <item translatable="yes">Context</item>
                     </items>
