--- a/cui/uiconfig/ui/borderpage.ui
+++ b/cui/uiconfig/ui/borderpage.ui
@@ -103,8 +103,22 @@
                       </packing>
                     </child>
                     <child>
-                      <object class="GtkCheckButton" id="rmadjcellborders:wrap">
-                        <property name="label" translatable="yes">Remove border from adjacent cells</property>
+                      <object class="GtkLabel" id="rmadjcellbordersft">
+                        <property name="visible">True</property>
+                        <property name="can_focus">False</property>
+                        <property name="xalign">0</property>
+                        <property name="label" translatable="yes">_Adjacent Cells:</property>
+                        <property name="use_underline">True</property>
+                        <property name="mnemonic_widget">rmadjcellborders</property>
+                      </object>
+                      <packing>
+                        <property name="left_attach">0</property>
+                        <property name="top_attach">4</property>
+                      </packing>
+                    </child>
+                    <child>
+                      <object class="GtkCheckButton" id="rmadjcellborders">
+                        <property name="label" translatable="yes">Remove border</property>
                         <property name="visible">True</property>
                         <property name="can_focus">True</property>
                         <property name="receives_default">False</property>
@@ -113,7 +127,7 @@
                       </object>
                       <packing>
                         <property name="left_attach">0</property>
-                        <property name="top_attach">4</property>
+                        <property name="top_attach">5</property>
                       </packing>
                     </child>
                   </object>
